--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,16 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+#include <stdio.h>
+int main()
+{
+ int a; 
+ while(true)
+ {
+ scanf("%d", &a);
+ if(a==0)
+ {
+ pritnf(" friend's name is fool");
+ }else{
+ printf(" I am fool")
+ }
+ }
+return 0;
+}
